# Irodori-TTS

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: __init__.py  benchmark_postprocessing.py
configs/: train_2.5b.yaml  train_500m.yaml  train_500m_v2.yaml  train_500m_v2_lora.yaml  train_500m_v2_voice_design.yaml  train_500m_v2_voice_design_lora.yaml  train_500m_v3_full.yaml  train_500m_v3_speaker_inversion.yaml  train_command_windows.txt
core/: __init__.py  codec.py  config.py  duration.py  latents.py  lora.py  model.py  rf.py  speaker_inversion.py  tokenizer.py  watermark.py
dataset/: _io_utils.py  _textnorm.py  acoustic_segmentation.py  ero_voice_classifier.py  grok_stt.py  local_asr.py  manifest_merge.py  nonverbal_clustering.py  nonverbal_event_pipeline.py  nonverbal_labeling.py  nonverbal_pipeline.py  nonverbal_report.py  nonverbal_subclustering.py  nonverbal_training_manifest.py  prepare_all_command_windows.txt  speech_pipeline.py  transcript_correction.py
dataset/cli/: __init__.py  cluster_nonverbal.py  correct_transcripts.py  merge_latent_manifests.py  prepare_all.py  prepare_anime_whisper.py  prepare_grok_stt.py  prepare_manifest.py  prepare_nonverbal.py  prepare_nonverbal_events.py  prepare_nonverbal_training.py  prepare_speech.py  prepare_transcribe.py
docs/: parameters.md
inference/: __init__.py  postprocessing.py  runtime.py
inference/apps/: __init__.py  gradio.py  voice_design.py
inference/cli/: __init__.py  convert_checkpoint.py  infer.py
irodori_tts/: __init__.py  codec.py  config.py  dataset.py  inference_runtime.py  optim.py  rf.py  text_normalization.py  tokenizer.py
irodori_tts/apps/: gradio.py  voice_design.py
irodori_tts/cli/: __init__.py  cluster_nonverbal.py  convert_checkpoint.py  correct_transcripts.py  infer.py  merge_latent_manifests.py  prepare_all.py  prepare_anime_whisper.py  prepare_grok_stt.py  prepare_manifest.py  prepare_nonverbal_events.py  prepare_nonverbal_training.py  sample_training_checkpoint.py  train.py
irodori_tts/data_prep/: __init__.py  acoustic_segmentation.py  ero_voice_classifier.py  grok_stt.py  local_asr.py  nonverbal_analysis.py  nonverbal_clustering.py  nonverbal_event_pipeline.py  nonverbal_labeling.py  nonverbal_report.py  nonverbal_training_manifest.py  transcript_correction.py
irodori_tts/inference/: __init__.py  postprocessing.py  runtime.py
irodori_tts/training/: __init__.py  data.py
requirements/: README.md
scripts/: README.md  _bootstrap.py  cluster_nonverbal.py  convert_checkpoint.py  gradio.py  infer.py  prepare_all.py  prepare_grok_stt.py  prepare_manifest.py  refine_grok_text.py  train.py  voice_design.py
tests/: test_asr_prep.py  test_bf16_inference.py  test_bf16_training.py  test_data_path.py  test_data_pipeline_automation.py  test_dataset_cli_fixes.py  test_nonverbal_prep.py  test_postprocessing.py  test_precision_contract.py  test_tokenizer.py  test_training_units.py
train/: bf16_audio.py  data.py  dataset.py  ema.py  losses.py  metrics.py  optim.py  progress.py  sampler.py
train/cli/: __init__.py  finetune_dacvae_decoder.py  sample_training_checkpoint.py  train.py
train/configs/: dacvae_decoder_finetune_command_windows.txt  train_1_5b_full.yaml  train_500m_v3_aegi_chupa.yaml  train_500m_v3_full.yaml  train_command_windows.txt  train_command_windows_1_5b.txt  train_command_windows_aegi_chupa.txt
