[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "irodori-tts"
version = "0.1.0"
description = "Irodori-TTS training and inference codebase"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes>=0.49.2",
    "dacvae",
    "datasets>=3.0.0",
    "gradio>=5.0.0",
    "huggingface-hub>=0.34.0,<1.0",
    "llvmlite>=0.40.0",
    "numba>=0.57.0",
    "peft>=0.18.0",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "safetensors>=0.7.0",
    "scikit-learn>=1.7.0",
    "soundfile>=0.12.0",
    "sentencepiece>=0.1.99,<0.2",
    "silentcipher @ git+https://github.com/SesameAILabs/silentcipher.git@d46d7d0893a583d8968ab3a6626e2289faec9152",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0,<0.11.0",
    "transformers<5",
    "tqdm>=4.67.3",
    "wandb>=0.17.0",
]

[project.scripts]
irodori-train = "irodori_tts.cli.train:main"
irodori-infer = "irodori_tts.cli.infer:main"
irodori-prepare-manifest = "irodori_tts.cli.prepare_manifest:main"
irodori-prepare-grok-stt = "irodori_tts.cli.prepare_grok_stt:main"
irodori-cluster-nonverbal = "irodori_tts.cli.cluster_nonverbal:main"
irodori-prepare-nonverbal-events = "irodori_tts.cli.prepare_nonverbal_events:main"
irodori-prepare-nonverbal-training = "irodori_tts.cli.prepare_nonverbal_training:main"
irodori-merge-latent-manifests = "irodori_tts.cli.merge_latent_manifests:main"
irodori-convert-checkpoint = "irodori_tts.cli.convert_checkpoint:main"
irodori-web = "irodori_tts.apps.gradio:main"
irodori-voice-design-web = "irodori_tts.apps.voice_design:main"

[project.optional-dependencies]
cpu = [
    "torch>=2.10.0,<2.11.0",
    "torchaudio>=2.10.0,<2.11.0",
    "torchcodec>=0.10.0,<0.11.0",
]
cu128 = [
    "torch>=2.10.0,<2.11.0",
    "torchaudio>=2.10.0,<2.11.0",
    "torchcodec>=0.10.0,<0.11.0",
]
rocm = [
    "torch>=2.10.0,<2.11.0",
    "torchaudio>=2.10.0,<2.11.0",
    "torchcodec>=0.10.0,<0.11.0",
    "pytorch-triton-rocm>=3.5.1; sys_platform == 'linux'",
    "triton-rocm>=3.6.0; sys_platform == 'linux'",
]
xpu = [
    "torch>=2.10.0,<2.11.0; sys_platform == 'linux' or sys_platform == 'win32'",
    "torchaudio>=2.10.0,<2.11.0; sys_platform == 'linux' or sys_platform == 'win32'",
    "torchcodec>=0.10.0,<0.11.0; sys_platform == 'linux' or sys_platform == 'win32'",
    "triton-xpu==3.6.0; sys_platform == 'linux' or sys_platform == 'win32'",
]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.9.0",
]
nonverbal-analysis = [
    "anime-speaker-embedding==0.2.1",
    "pyannote.audio==3.1.1",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
        { extra = "rocm" },
        { extra = "xpu" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
    { index = "pytorch-xpu", extra = "xpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
    { index = "pytorch-xpu", extra = "xpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
]
triton-rocm = [
    { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
]
triton-xpu = [
    { index = "pytorch-xpu", extra = "xpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
dacvae = { git = "https://github.com/facebookresearch/dacvae" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.1"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["irodori_tts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools.packages.find]
include = ["irodori_tts*"]
